<resources>
    <!-- Slider Defaults -->
    <array name="initial_slider_values">
        <item>30</item>
        <item>240</item>
    </array>

    <string name="app_name">TimeBanking</string>

    <!-- Profile Defaults -->
    <string name="fullname">Mario Rossi</string>
    <string name="age">24</string>
    <string name="yo">y.o.</string>
    <string name="nickname">Mario98</string>
    <string name="email_address">mario.rossi@gmail.com</string>
    <string name="location">Torino</string>
    <string name="skills">Android developer, Electrician</string>
    <string name="description">Frequento il Politecnico di Torino, mi piace cucinare e ascoltare musica</string>
    <string name="timebanking_credit">TimeBanking credit</string>

    <!-- Profile Labels -->
    <string name="fullname_text">Fullname</string>
    <string name="age_text">Age</string>
    <string name="nickname_text">Nickname</string>
    <string name="email_address_text">Email</string>
    <string name="location_text">Location</string>
    <string name="skills_text">Skills</string>
    <string name="addskills_hint">Add a new skill</string>
    <string name="description_text">Description</string>

    <!-- Time slot Defaults -->
    <string name="title_advertisement">Offer lectures</string>
    <string name="description_advertisement">Offer lectures in scientific subjects</string>
    <string name="duration_advertisement">3</string>
    <string name="location_advertisement">My Home</string>
    <string name="sampleDate">15/05/22</string>
    <string name="sampleTime">19:30</string>
    <string name="sampleDuration">120</string>

    <!-- Time slot Labels -->
    <string name="title_advertisement_text">Title advertisement</string>
    <string name="description_advertisement_text">Description of offered service</string>
    <string name="date_time_advertisement_text">Date and time of the advertisement</string>
    <string name="duration_advertisement_text">Duration of the offered time slot (minutes)</string>
    <string name="location_advertisement_text">Location advertisement</string>
    <string name="date_slot_text">Date</string>
    <string name="start_slot_text">Start</string>
    <string name="duration_slot_text">Duration (min)</string>
    <string name="no_data_available">No slots available</string>

    <!-- Buttons and menu voices -->
    <string name="button_add_skills">Add skill</string>
    <string name="profile_picture">Profile picture</string>
    <string name="camera_button">Camera</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="select_from_gallery">Select from gallery</string>

    <!-- Drawer and Navigation-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="myOffersList">My offers list</string>
    <string name="my_offers">My offers</string>
    <string name="my_offer">My offer</string>
    <string name="offers_list">Offers list</string>
    <string name="interested_offers">Interested offers</string>
    <string name="interestedOffersList">Interested offers list</string>
    <string name="available_skills">Available skills</string>
    <string name="available_skills_list">Available skills list</string>
    <string name="editAdvertisement">Edit Offer</string>
    <string name="edit_profile">Edit Profile</string>

    <!--  -->
    <string name="menu">Menu</string>
    <string name="preference_file_key">preference_file</string>
    <string name="select_skills">Touch the skills you want to select</string>
    <string name="error_skills">Select at least one skill</string>
    <string name="error_user_skills">Add at least one skill</string>
    <string name="ratingTitle">Would you suggest this user?</string>
    <string name="ratingAdvice">The user gave you all the information you needed, used correct language, was prompt in replying</string>
    <string name="skillListTitle">Select the skill you are interested in</string>
    <string name="suggestReview">Amazing experience, i learned so much!</string>
    <string name="hintComment">Give reasons for your answer</string>
    <string name="noAvailableReview">There is no available review</string>
    <string name="assigned_accepted_offers">Assigned/Accepted offers</string>
    <string name="timebanking_icon">Timebanking icon</string>
    <string name="minutes">minutes</string>
    <string name="as_receiver">as Receiver</string>
    <string name="see_all_reviews">See all reviews</string>
    <string name="review_comment">review comment</string>
    <string name="do_you_want_to_assign_this_timeslot">Do you want to assign this timeslot?</string>
    <string name="review">Review</string>
    <string name="reject">Reject</string>
    <string name="assign">Assign</string>
    <string name="enter_message">Enter Message</string>
    <string name="send_button">send button</string>
    <string name="still_no_interested_users">Still no interested users :(</string>

</resources>